Fix chat scrollbar on osx, also reduce height of chat

--- a/wpc/static/chat.css
+++ b/wpc/static/chat.css
@@ -8,7 +8,7 @@
 }
 
 .panel-chat {
-  max-width: 400px;
+  max-width: 300px;
   margin: 0 auto;
 }
 
